logo animate alignment issue

--- a/app/components/feedbacks/feedbacks.module.css
+++ b/app/components/feedbacks/feedbacks.module.css
@@ -14,7 +14,7 @@
     height: 136px;
 }
 .quationBeYouLogo{
-    margin: 0px 3.4rem;
+    margin: 45px 3.4rem 0;
 }
 .quationBeYouLogo img{
     width: 200px;
