--- a/app/globals.css
+++ b/app/globals.css
@@ -340,13 +340,29 @@ a{
 
 .logoAnimate .beyouText {
   animation: spin 20s cubic-bezier(.3, .3, .3, .3) infinite;
-   transform-origin: 50% 50%;
-   transform-box: fill-box;
+  transform-origin: 50% 50%;
+  transform-box: fill-box;
  }
+
+ /* .logoAnimate .beyouText {
+  animation: spin 20s infinite linear;
+  transform: translate(50%, 50%);
+  transform-origin: 50% 50%;
+  font-family: EditorsNote-Regular;
+  font-size: 12px;
+  letter-spacing: 2px;
+  word-spacing: 15px;
+  color: #A5642C;
+ } */
  @keyframes spin{
   50% { transform: rotate(180deg); }
   100% { transform: rotate(360deg); }
  }
+
+ /* @keyframes spin {
+  from {transform:rotate(0deg);}
+  to {transform:rotate(360deg);}
+} */
 
 
 .callicon{
